--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
         <div class="column4">
             <p class="texto-imagen">Gaming</p>
             <img class="imagenes" src="./img/section-2-d.jpeg" alt="Niña jugando en portatil">
-
         </div>
 
     </div>
@@ -56,12 +55,36 @@
             <img class="imagen2" src="./img/section-3.png" alt="fotos de una escuela">
         </div>
         <div class="column2">
-            <p class="parrafo1">Unlock your potencial in our Miami studio</p>
+            <p class="parrafo1"><strong>Unlock your potencial in our Miami studio</strong></p>
             <p class="parrafo2">Our new studio in Miami features a Tech Room, an Open Creative Gallery, and a Hangout Zone for parents or caregivers with plenty of room for social distancing.</p>
-            
         </div>
+    </div>
+    <div class="row">
+        <div class="column4">
+            <img class="imagen4" src="./img/section-4-a.jpg" alt="">
+        </div>
+        <div class="column4">
+            <img class="imagen4" src="./img/section-4-b.jpg" alt="">
+        </div>
+        <div class="column4">
+            <img class="imagen4" src="./img/section-4-c.jpg" alt="">
+        </div>
+        <div class="column4">
+            <img class="imagen4" src="./img/section-4-d.jpg" alt="">
+        </div>
+    </div>
 
+    <div class="row azul">
+        <div>
+            <p class="parrafo3"><strong>Come meet us. we would love to get to know you!</strong></p>
+        </div>
+    </div>
 
+    <div class="row">
+        <div class="column2">
+            <p></p>
+        </div>
+        <div></div>
 
     </div>
 </body>
