casi el 100% sin responsive

--- a/index.html
+++ b/index.html
@@ -80,11 +80,18 @@
         </div>
     </div>
 
-    <div class="row">
-        <div class="column2">
-            <p></p>
+    <div class="row negro">
+        <div class="column2"> 
+            <p class="copy">© Minds of tomorrow, LLC. 2020</p>
         </div>
-        <div></div>
+        <div class="column20">
+           <p class="Facebook">Faceboook</p>
+           <p class="Instagram">Instagram</p>
+        </div>
+        <div class="column30">
+            <p class="Facebook">Faceboook</p>
+            <p class="Instagram">Instagram</p>
+        </div>
 
     </div>
 </body>
