todo hecho sin responsive

--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
             <p class="copy">© Minds of tomorrow, LLC. 2020</p>
         </div>
         <div class="column20">
-           <p class="Facebook">Faceboook</p>
-           <p class="Instagram">Instagram</p>
+           <p class="facebook">Facebook</p>
+           <p class="instagram">Instagram</p>
         </div>
         <div class="column30">
-            <p class="Facebook">Faceboook</p>
-            <p class="Instagram">Instagram</p>
+            <p class="programs">Our programs</p>
+            <p class="studio">The studio</p>
         </div>
 
     </div>
