todo ternminado y responsive

--- a/index.html
+++ b/index.html
@@ -30,22 +30,21 @@
             <p class="parrafo3"><strong>Innovative programs for ages 6 to 13.</strong></p>
         </div>
         <div class="column4">
-            <p class="texto-imagen">Robotics</p>
+            <p class="texto-imagen"><strong>Robotics</strong></p>
             <img class="imagenes" src="./img/section-2-a.jpeg" alt="foto de robotica">
-
         </div>
         <div class="column4">
-            <p class="texto-imagen">Sustainable</p>
+            <p class="texto-imagen"><strong>Sustainable</strong></p>
             <img class="imagenes" src="./img/section-2-b.jpeg" alt="foto de algo sostenible">
 
         </div>
         <div class="column4">
-            <p class="texto-imagen">Digital</p>
+            <p class="texto-imagen"><strong>Digital</strong></p>
             <img class="imagenes" src="./img/section-2-c.jpeg" alt="alguien dibijando">
 
         </div>
         <div class="column4">
-            <p class="texto-imagen">Gaming</p>
+            <p class="texto-imagen"><strong>Gaming</strong></p>
             <img class="imagenes" src="./img/section-2-d.jpeg" alt="Niña jugando en portatil">
         </div>
 
@@ -76,7 +75,7 @@
 
     <div class="row azul">
         <div>
-            <p class="parrafo3"><strong>Come meet us. we would love to get to know you!</strong></p>
+            <p class="a"><strong>Come meet us. we would love to get to know you!</strong></p>
         </div>
     </div>
 
