alt de la sfotos puestos

--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
     </div>
     <div class="row">
         <div class="column4">
-            <img class="imagen4" src="./img/section-4-a.jpg" alt="">
+            <img class="imagen4" src="./img/section-4-a.jpg" alt="imagen1">
         </div>
         <div class="column4">
-            <img class="imagen4" src="./img/section-4-b.jpg" alt="">
+            <img class="imagen4" src="./img/section-4-b.jpg" alt="imagen2">
         </div>
         <div class="column4">
-            <img class="imagen4" src="./img/section-4-c.jpg" alt="">
+            <img class="imagen4" src="./img/section-4-c.jpg" alt="imagen3">
         </div>
         <div class="column4">
-            <img class="imagen4" src="./img/section-4-d.jpg" alt="">
+            <img class="imagen4" src="./img/section-4-d.jpg" alt="imagen4">
         </div>
     </div>
 
